Part4/Exercise4.08/manifests-overlays/overlays/production/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx-prod
  annotations:
    kubernetes.io/ingress.class: nginx-prod
spec:
  controller: k8s.io/ingress-nginx
  # scope: Namespace
