Part4/Exercise4.08/manifests-overlays/overlays/production/dep-analysistemplate-back.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  namespace: project
  name: todo-backend-dep
spec:
  strategy:
    canary:
      steps:
      - analysis:
          templates:
            - templateName: prod-cpu-usage-rate
