Part4/Exercise4.08/manifests-overlays/overlays/production/dep-analysistemplate-front.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  namespace: project
  name: project-dep
spec:
  template:
    metadata:
      labels:
        app: project
    spec:
      volumes:
        - name: files-storage
          persistentVolumeClaim:
            claimName: prod-project-claim
