Part4/Exercise4.08/manifests-overlays/overlays/production/deployment-broadcast.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-broadcaster-dep
spec:
  replicas: 6
  selector:
    matchLabels:
      app: todo-broadcaster
  template:
    metadata:
      labels:
        app: todo-broadcaster
    spec:
      containers:
        - name: todo-broadcaster
          imagePullPolicy: Always
          image: IMAGE/BROADCASTER
