Part4/Exercise4.08/manifests-overlays/overlays/production/statefulset-todos-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: project
  name: todo-db-stset
spec:
  serviceName: todo-db-svc
  replicas: 1
  selector:
    matchLabels:
      app: todo-db
  template:
    metadata:
      labels:
        app: todo-db
    spec:
      volumes:
        - name: somedata
          persistentVolumeClaim:
            claimName: prod-somedata-pvc
